# boilermaker

./: '  .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  DEPLOY-NOTES.md  Dioxus.toml  LICENSE  README.md  dist-workspace.toml  flake.nix  gateway.yaml  package-lock.json  package.json  release.sh  serve-desktop.sh  serve-web.sh  tailwind.css  tailwind.sh  test-all.sh
.github/workflows/: ci.yml  deploy.yml  release.yml
api/: Cargo.toml
boil/: Cargo.toml
boil/src/: README.md  config.rs  lib.rs  local_cache.rs  logging.rs  main.rs  template.rs
boil/src/commands/: add.rs  list.rs  mod.rs  new.rs  test.rs  update.rs
boilermaker_api/: Cargo.toml
boilermaker_api/src/: lib.rs
boilermaker_boil/: Cargo.toml
boilermaker_boil/src/: lib.rs  logging.rs  main.rs
boilermaker_boil/src/commands/: add.rs  list.rs  new.rs
boilermaker_cli/: Cargo.toml
boilermaker_cli/src/: main.rs
boilermaker_core/: Cargo.toml
boilermaker_core/src/: config.rs  lib.rs  state.rs  template.rs
boilermaker_core/src/commands/: add.rs  install.rs  list.rs  mod.rs  new.rs  remove.rs  search.rs  sources.rs  update.rs
boilermaker_core/src/db/: local_db.rs  mod.rs  source.rs  template.rs  template_cache.rs
boilermaker_core/src/sources/: schema.rs
boilermaker_core/src/template/: lib.rs  static_analysis.rs
boilermaker_core/src/util/: file.rs  mod.rs  string.rs
boilermaker_desktop/: Cargo.toml
boilermaker_desktop/src/: lib.rs  main.rs  templates_context.rs
boilermaker_desktop/src/ui/: home.rs  mod.rs  new_project.rs  template_add.rs  template_new.rs
boilermaker_views/: Cargo.toml
boilermaker_views/assets/: highlight.min.js  main.css  main.js  tailwind.css
boilermaker_views/src/: constants.rs  echo.rs  get_involved.rs  lib.rs  search.rs  settings.rs
boilermaker_views/src/util/: dioxus.rs  mod.rs
boilermaker_views/src/web/: layout.rs  mod.rs  nav.rs
boilermaker_web/: Cargo.toml  README.md  assets
boilermaker_web/src/: lib.rs  main.rs
boilermaker_web/src/routes/: docs.rs  get_involved.rs  help.rs  home.rs  mod.rs  settings.rs  templates.rs
boilermaker_web/src/ui/: home.rs
boilermaker_web/templates/: help.jinja  home.jinja  layout.jinja  nav.jinja
config/: Cargo.toml
config/src/: lib.rs
core/: Cargo.toml
core/src/: config.rs  lib.rs  template.rs
core/src/db/: mod.rs
core/src/util/: mod.rs  time.rs
db/: Cargo.toml
db/src/: lib.rs  template_cache.rs
desktop/: Cargo.toml
desktop/assets/: tailwind.css
desktop/src/ui/: home.rs
desktop/src/views/: constants.rs  echo.rs  home.rs
docs/: 0001_getting-started.md  cli-reference.md  configuration.md  file-paths.md  getting-started.md  install.md  sources.md  template-structure.md  variables.md
docs/aaa/: one.md
docs/bbb/ccc/: c_one.md  c_two.md
docs/bbb/ccc/ddd/: d_one.md  d_two.md
examples/hello-world/: boilermaker.toml
examples/source-sqlite/: README.md
examples/source_sqlite/: README.md  boilermaker_source.toml
examples/variable-profiles/: README.md  boilermaker.toml  example.sh  install.sh  quick-install.sh  test.sh
examples/variable-profiles/node/src/: main.js
examples/variable-profiles/python/src/: main.py
migrations/: 20250917043244_create_users_table.up.sql  20251120022133_cache.up.sql  20251120022133_local_cache.down.sql  20251120022133_local_cache.up.sql  20251120022211_local_test_source.up.sql  20251205022516_source.up.sql  20260210032546_docs.down.sql  20260210032546_docs.up.sql
template/: Cargo.toml
template/src/: lib.rs
util/: Cargo.toml
util/src/: fmt.rs
views/: Cargo.toml
views/assets/: tailwind.css
web/: Cargo.toml
web/assets/: main.css  tailwind.css
web/src/: main.rs
web/src/views/: constants.rs  docs.rs  home.rs  mod.rs  search.rs  templates.rs
