[workspace]
resolver = "2"
members = ["api", "boil", "config", "db", "template", "util", "web"]

[workspace.dependencies]
async-trait = "0.1.89"
clap = { version = "4.5.47", features = ["derive"] }
color-eyre = "0.6.5"
colored = "3.0.0" # TODO: pick one of colored or nu-ansi-term
dioxus = { version = "0.6.3" }
fs_extra = "1.3.0"
dirs = "6.0.0"
git2 = "0.20.2"
indoc = "2.0.6"
lazy_static = "1.5.0"
minijinja = { version = "2.12.0", features = ["loader"] }
nu-ansi-term = "0.50.1"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.7"
tracing = { version = "0.1.41", features = ["log"] }
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.20", features = [
    "json",
    "registry",
    "env-filter",
] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
walkdir = "2.5.0"

# workspace
api = { path = "api" }
config = { path = "config" }
db = { path = "db" }
template = { path = "template" }
util = { path = "util" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
