[package]
name = "boil"
version = "0.1.0"
edition = "2024"

[dependencies]

# External
clap = { workspace = true }
color-eyre = { workspace = true }
dirs = { workspace = true }
gitoxide = { workspace = true }
lazy_static = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

# Internal
util = { workspace = true }
