[package]
name = "boil"
version = "0.1.0"
edition = "2024"

[dependencies]

# External
clap = { workspace = true }
color-eyre = { workspace = true }
colored = { workspace = true }            # TODO: pick one of colored or nu-ansi-term
dirs = { workspace = true }
fs_extra = { workspace = true }
git2 = { workspace = true }
lazy_static = { workspace = true }
minijinja = { workspace = true }
nu-ansi-term = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }

# Internal
util = { workspace = true }
