[package]
name = "boilermaker_core"
version = "0.1.0"
edition = "2024"

[dependencies]
# External
async-trait = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
dirs = { workspace = true }
fs_extra = { workspace = true }
git2 = { workspace = true }
lazy_static = { workspace = true }
minijinja = { workspace = true }
nu-ansi-term = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
tabled = { workspace = true }
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }
# Internal
