[package]
name = "config"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = { workspace = true }
dirs = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true }
