[package]
name = "desktop"
version = "0.1.0"
edition = "2021"

[dependencies]

# External
dioxus = { workspace = true, features = ["router"] }
indoc = { workspace = true }

# Internal
api = { workspace = true }
views = { workspace = true }

[features]
default = []
desktop = ["dioxus/desktop"]
server = ["dioxus/server"]
