[package]
name = "template"
version = "0.1.0"
edition = "2024"

[dependencies]

# External 
color-eyre = { workspace = true }
dirs = { workspace = true }
git2 = { workspace = true }
tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true }

# Internal 
config = { workspace = true }
