[package]
name = "template"
version = "0.1.0"
edition = "2024"

[dependencies]

# External 
color-eyre = { workspace = true }
dirs = { workspace = true }
fs_extra = { workspace = true }
git2 = { workspace = true }
minijinja = { workspace = true }
tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }

# Internal 
config = { workspace = true }
