[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
# External
dioxus = { workspace = true, features = ["router"] }
indoc = { workspace = true }
# Internal
api = { workspace = true }
views = { workspace = true }

[features]
default = []
web = ["dioxus/web"]
server = ["dioxus/server"]
